Ensure that the wp-i18n GitHub Action can add a script to Composer to run locally.

--- a/github-actions/wp-i18n/config.json
+++ b/github-actions/wp-i18n/config.json
@@ -20,7 +20,7 @@
     },
     {
       "action": "runCommand",
-      "command": "source add-composer-script.sh {{ vendor_name }} {{ package_name }}"
+      "command": "source {{ template_dir }}/add-composer-script.sh {{ vendor_name }} {{ package_name }}"
     }
   ]
 }
